--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
         color:#fff;
-        background:#333;
+        background:black;
         font-family:Noteworthy;
         width:960px;
         margin:auto;
@@ -24,8 +24,8 @@ a, a:visited {
 }
 
 a:hover {
-        color: #77ccee;
-        text-decoration: none;
+        color: yellow;
+        text-decoration: underline;
 }
 
 #nav {
@@ -45,7 +45,7 @@ a:hover {
         width:110px;
         text-align:center;
         font-size:13px;
-        border: 2px dotted purple;
+        border: 3px dotted turquoise;
         border-radius:60px;
 }
 
@@ -60,12 +60,12 @@ a:hover {
         list-style: none;
         float:left;
         margin-left:0;
-        border-right: 1px solid #c0c0c0;
+        border-right: 5px dashed #c0c0c0;
         }
         
 #menu li {
         width: 125px;
-        padding:5px;
+        padding:10px;
         margin-bottom:10px;
         font-size:13px;
         }
