--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ header, main, footer {
         
 }
 
-header main h1 {
-        color:purple;
+header, main h1 {
+        color:green;
 }
 
 a, a:visited {
